@@ -40,6 +40,13 @@
 #
 ##########################################################################################################
 #
+# IPMI_Voltage_Assertion
+#
+# IPMI_Voltage_State_Asserted       Warning
+# IPMI_Voltage_State_Deasserted     Nominal
+#
+##########################################################################################################
+#
 # IPMI_Voltage_Performance
 #
 # IPMI_Voltage_Performance_Met  Nominal
